Adicionado versão Mobile

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-mobile.css">
 
   <script src="js/scriptTimeProjectExzen.js" async defer></script>
   <script src="js/scriptTime.js" async defer></script>
@@ -57,7 +58,9 @@
       </div>
     </section>
 
-    <section class="event_container">
+    <hr class="divisor">
+
+    <section class="event_container inverter">
         <div class="sobre_container">
           <h3>Sobre</h3>
           <p>Um evento de música eletrônica que a contecerá em dias 8, 9 e 10 de Novembro de 2024 em Fazenda Rio Grande</p>
