--- a/contato.html
+++ b/contato.html
@@ -15,6 +15,7 @@
 
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-mobile.css">
 
   <script src="js/scriptTimeProjectExzen.js" async defer></script>
   <script src="js/scriptTime.js" async defer></script>
